--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
       sizes="16x16"
       href="/icons/favicon/favicon-16x16.png"
     />
+
+    <link rel="preload" href="./public/images/hg-0.png" as="image" />
+    <link rel="preload" href="./public/images/hg-1.png" as="image" />
+    <link rel="preload" href="./public/images/hg-2.png" as="image" />
+    <link rel="preload" href="./public/images/hg-3.png" as="image" />
+    <link rel="preload" href="./public/images/hg-4.png" as="image" />
+    <link rel="preload" href="./public/images/hg-5.png" as="image" />
+    <link rel="preload" href="./public/images/hg-6.png" as="image" />
+    <link rel="preload" href="./public/images/hg-7.png" as="image" />
+    <link rel="preload" href="./public/images/hg-8.png" as="image" />
+    <link rel="preload" href="./public/images/hg-9.png" as="image" />
+    <link rel="preload" href="./public/images/hg-10.png" as="image" />
+    <link rel="preload" href="./public/images/hg-win.png" as="image" />
   </head>
   <body>
     <main
@@ -40,7 +53,7 @@
             class="relative w-11 h-6 bg-gray-200 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-indigo-500"
           ></div>
           <span
-            class ="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
+            class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
             >Dark mode</span
           >
         </label>
