--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
       href="/icons/favicon/favicon-16x16.png"
     />
 
-    <link rel="preload" href="./public/images/hg-0.png" as="image" />
-    <link rel="preload" href="./public/images/hg-1.png" as="image" />
-    <link rel="preload" href="./public/images/hg-2.png" as="image" />
-    <link rel="preload" href="./public/images/hg-3.png" as="image" />
-    <link rel="preload" href="./public/images/hg-4.png" as="image" />
-    <link rel="preload" href="./public/images/hg-5.png" as="image" />
-    <link rel="preload" href="./public/images/hg-6.png" as="image" />
-    <link rel="preload" href="./public/images/hg-7.png" as="image" />
-    <link rel="preload" href="./public/images/hg-8.png" as="image" />
-    <link rel="preload" href="./public/images/hg-9.png" as="image" />
-    <link rel="preload" href="./public/images/hg-10.png" as="image" />
-    <link rel="preload" href="./public/images/hg-win.png" as="image" />
+    <link rel="preload" href="./images/hg-0.png" as="image" />
+    <link rel="preload" href="./images/hg-1.png" as="image" />
+    <link rel="preload" href="./images/hg-2.png" as="image" />
+    <link rel="preload" href="./images/hg-3.png" as="image" />
+    <link rel="preload" href="./images/hg-4.png" as="image" />
+    <link rel="preload" href="./images/hg-5.png" as="image" />
+    <link rel="preload" href="./images/hg-6.png" as="image" />
+    <link rel="preload" href="./images/hg-7.png" as="image" />
+    <link rel="preload" href="./images/hg-8.png" as="image" />
+    <link rel="preload" href="./images/hg-9.png" as="image" />
+    <link rel="preload" href="./images/hg-10.png" as="image" />
+    <link rel="preload" href="./images/hg-win.png" as="image" />
   </head>
   <body>
     <main
       id="app"
-      class="h-screen flex flex-col justify-center items-center dark:text-white dark:bg-zinc-800"
+      class="h-lvh flex flex-col justify-center items-center dark:text-white dark:bg-zinc-800"
     >
       <div class="absolute top-6 right-6">
         <label class="inline-flex items-center cursor-pointer">
