correct fix for height

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <main
       id="app"
-      class="h-lvh flex flex-col justify-center items-center dark:text-white dark:bg-zinc-800"
+      class="h-dvh flex flex-col justify-center items-center dark:text-white dark:bg-zinc-800"
     >
       <div class="absolute top-6 right-6">
         <label class="inline-flex items-center cursor-pointer">
